# sign-language-segmentation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  softnms_parameters.py
config/: DGS_O_LSTM_H256_2L_BIO.yaml  DGS_O_LSTM_H256_2L_IO.yaml  dgs_replication.yaml  example.yaml
config/alpha1/: dgs_io.yaml  dgs_io_off.yaml  dgs_io_w.yaml  lsfb_io_debug.yaml  lsfb_io_off.yaml  lsfb_io_w.yaml  phoenix_io.yaml  phoenix_io_debug.yaml  phoenix_io_off.yaml  phoenix_io_w.yaml
config/alpha1_generalization_local/: dgs2lsfb_io.yaml  dgs2lsfb_io_off.yaml  lsfb2dgs_io.yaml  lsfb2dgs_io_off.yaml
config/alpha1_local/: dgs_io.yaml  dgs_io_off.yaml  lsfb_io.yaml  lsfb_io_off.yaml  phoenix_io.yaml
config/alpha1_nst/: dgs_io.yaml  lsfb_io_off.yaml
config/alpha2/: lsfb_io_off_debug.yaml
config/archs/: dgs_o_lstm_h128_1l_io.yaml  dgs_o_lstm_h128_2l_io.yaml  dgs_o_lstm_h128_4l_io.yaml  dgs_o_lstm_h256_1l_io.yaml  dgs_o_lstm_h256_2l_io.yaml  dgs_o_lstm_h256_4l_io.yaml  dgs_o_lstm_h512_1l_io.yaml  dgs_o_lstm_h512_2l_io.yaml  dgs_o_lstm_h512_4l_io.yaml  dgs_o_lstm_h64_1l_io.yaml  dgs_o_lstm_h64_2l_io.yaml  dgs_o_lstm_h64_4l_io.yaml  dgs_o_mstcn_h128_4s_10l_io.yaml  dgs_o_mstcn_h128_4s_6l_io.yaml  dgs_o_mstcn_h64_4s_10l_io.yaml  (+1 more)
sls/: testing.py  training.py
slurm/: compare_io_bio.sh  compare_window_sizes.sh  exp_alpha1.sh  exp_alpha1_nst.sh  exp_archs.sh  exp_beta1_comparison.sh  exp_beta1_noise.sh  exp_improv1.sh  exp_improv2.sh  exp_input_features.sh  exp_noise.sh  exp_targets.sh  exp_windows.sh  launch_experiment.sh  train_offsets.sh
src/: main.py
(+153 files in other folders)
