[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['sls']

[project]
name = "sls"
version = "0.0.1"
authors = [
    { name="Pierre Poitier", email="pierre.poitier@unamur.be" },
]
description = "Sign Language Segmentation."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]